# hyprplane

./: .gitignore  CMakeLists.txt  FINDINGS.md  LICENSE  README.md  TODO.md  canvas.conf.example  hyprpm.toml
assets/: README.md
scripts/: canvas-overview
src/: CanvasMode.cpp  CanvasMode.hpp  Minimap.cpp  globals.hpp  main.cpp
